<resources>
    <string name="amity_recommended_for_you">Recommended for you</string>
    <string name="amity_community_followers">%1$s followers | %2$s mutual friends</string>
    <string name="amity_todays_trending">Today’s Trending</string>
    <string name="amity_number_of_followers">%1$s and %2$s are following</string>
    <string name="amity_posts">posts</string>
    <string name="amity_followers">followers</string>
    <string name="amity_mutual_friends">are members</string>
    <string name="amity_following">Following</string>
    <string name="amity_title_news_feed">Newsfeed</string>
    <string name="amity_title_explore">Explore</string>
    <string name="amity_title_my_communities">My Communities</string>
    <string name="amity_community">Community</string>
    <string name="amity_add">Add</string>
    <string name="amity_selected">Selected</string>
    <string name="amity_hello_blank_fragment">Hello blank fragment</string>
    <string name="amity_feed_post_time">%d mins</string>
    <string name="amity_post_compose_hint">What\'s going on…</string>
    <string name="amity_story">Story</string>
    <string name="amity_stories">Stories</string>
    <string name="amity_post">Post</string>
    <string name="amity_post_caps">POST</string>
    <string name="amity_new_post">New Post</string>
    <string name="amity_attachment_size_limit_exceed">One or more file exceed max file size limit 1GB</string>
    <string name="amity_attachment_count_limit_exceed">Can not select more than 10 files</string>
    <string name="amity_share">Share</string>
    <string name="amity_comment">Comment</string>
    <string name="amity_image_count">+%d</string>
    <string name="amity_view_all_files">View all files</string>
    <string name="amity_successfully_created_community">Successfully created community</string>
    <string name="amity_my_timeline">My Timeline</string>
    <string name="amity_post_as_community">Post as Community</string>
    <string name="amity_moderator">Moderator</string>
    <string name="amity_edited">Edited</string>
    <string name="amity_post_as_community_message">This option allows you to post on behalf of the community account.</string>
    <string name="amity_create_post_max_image_selected_warning">Reached max selection limit</string>
    <string name="amity_empty_feed">Your feed is empty</string>
    <string name="amity_empty_category_community">It\'s empty here…</string>
    <string name="amity_no_comments_found">No community found in this\ncategory</string>
    <string name="amity_find_community">Find community or create your own</string>
    <string name="amity_explore_community">Explore Community</string>
    <string name="amity_post_comment_hint">Say something nice</string>
    <string name="amity_view_replies">View replies</string>
    <string name="amity_view_all_replies">View all %d replies</string>
    <string name="amity_view_all_comments">View all comments…</string>
    <string name="amity_discard_reply_message">Do you want to discard your reply?</string>
    <string name="amity_update_reply_error_message">Unable to update reply</string>
    <string name="amity_reply_to">Reply to</string>
    <string name="amity_discard_reply_title">Discard Reply?</string>
    <string name="amity_community_name">Community name<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_category">Category</string>
    <string name="amity_category_required_field">Category<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_please_select_category">Please Select Category</string>
    <string name="amity_error_name">This name has already been taken.</string>
    <string name="amity_done">DONE</string>
    <string name="amity_discard_comment_title">Discard Comment?</string>
    <string name="amity_discard_comment_message">Do you want to discard your comment?</string>
    <string name="amity_members">members</string>
    <string name="amity_members_capital">Members</string>
    <string name="amity_edit_profile">Edit Profile</string>
    <string name="amity_notification">Notification</string>
    <string name="amity_notifications">Notifications</string>
    <string name="amity_notification_on">On</string>
    <string name="amity_notification_off">Off</string>
    <string name="amity_post_review">Post Review</string>
    <string name="amity_message">Message</string>
    <string name="amity_join">Join</string>
    <string name="amity_join_community_message">Join community to interact with all posts</string>
    <string name="amity_timeline">TIMELINE</string>
    <string name="amity_no_post">No posts yet</string>
    <string name="amity_start_post">Start your first post</string>
    <string name="amity_no_user_found">No user found</string>
    <string name="amity_my_community">My Community</string>
    <string name="amity_see_all">See all</string>
    <string name="amity_upload_incomplete">Upload incomplete</string>
    <string name="amity_image_upload_failed_message">Some images could not be uploaded. Please remove and try again</string>
    <string name="amity_attachment_upload_failed_message">Some files could not be uploaded. Please remove and try again</string>
    <string name="amity_no_community">No community found</string>
    <string name="amity_bullet">•</string>
    <string name="amity_members_count">%1$s members</string>
    <string name="amity_preparing">Preparing...</string>
    <string name="amity_community_setting">Community Settings</string>
    <string name="amity_basic_info">Basic Info</string>
    <string name="amity_community_permissions">Community Permissions</string>
    <string name="amity_mention_error_title">Unable to mention user</string>
    <string name="amity_mention_error_msg">You have reached maximum 30 mentioned users in a post.</string>
    <string name="amity_post_characters_limit_error_title">Unable to type text into post</string>
    <string name="amity_comment_characters_limit_error_title">Unable to type text into comment</string>
    <string name="amity_characters_limit_error_msg">You have reached 50,000 characters limit.</string>
    <string name="amity_characters_limit_dynamic_error_msg">You have reached %,d characters limit.</string>
    <string name="amity_unable_turn_off_post_review_title">Unable to turn off post review</string>
    <string name="amity_unable_turn_on_post_review_title">Unable to turn on post review</string>
    <string name="amity_something_went_wrong_pls_try">Something went wrong. Please try again later.</string>
    <string name="amity_turn_off_post_review">Turn off post review?</string>
    <string name="amity_turn_off_post_review_msg">All pending posts will be posted in community feed. Continue?</string>
    <string name="amity_turn_off">Turn Off</string>
    <string name="amity_moderators">Moderators</string>
    <string name="amity_choose_existing">Choose Existing</string>
    <string name="amity_take_photo">Take Photo</string>
    <string name="amity_upload_failed_profile_picture">Failed to update profile picture</string>
    <string name="amity_edit_profile_update_failed">Failed to update profile</string>
    <string name="amity_moderator_msg">You don\'t have permission to perform this action right now, please contact administrator for more info.</string>
    <string name="amity_file_max_limit_exceed_title">Unable to attach this file</string>
    <string name="amity_file_max_limit_exceed_message">The selected file is larger than 1GB. Please select a new file.</string>
    <string name="amity_duplicate_files">One or more files are already added</string>
    <string name="amity_report_sent">Report sent.</string>
    <string name="amity_unreport_sent">Unreport sent.</string>
    <string name="amity_report_has_been_sent">Report has been sent</string>
    <string name="amity_community_success">Successfully created community</string>
    <string name="amity_connectivity_issue">Unable to reach server</string>
    <string name="amity_add_comment">Add comment</string>
    <string name="amity_general">General</string>
    <plurals name="amity_feed_number_of_likes">
        <item quantity="one">%s like</item>
        <item quantity="other">%s likes</item>
    </plurals>
    <plurals name="amity_feed_number_of_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="amity_share_to_my_timeline">Share to My Timeline</string>
    <string name="amity_share_to_group">Share to Group</string>
    <string name="amity_more_options">More options…</string>
    <string name="amity_promote_moderator">Promote to moderator</string>
    <string name="amity_remove_moderator">Dismiss moderator</string>
    <string name="amity_remove">Remove</string>
    <string name="amity_remove_user_msg">This user won\’t no longer be able to search, post and interact in the community</string>
    <string name="amity_unrecognised_post_type">We couldn\’t recognize this post.</string>
    <string name="amity_something_went_wrong">Something went wrong</string>
    <string name="amity_replying_to">Replying to %s</string>
    <string name="amity_approve_member_post">Approve member posts</string>
    <string name="amity_approve_member_post_desc">Posts by members have to be reviewed and approved by community moderator.</string>
    <string name="amity_allow_notifications">Allow Notifications</string>
    <string name="amity_notifications_description">Turn on to receive push notifications from this community.</string>
    <string name="amity_new_posts">New posts</string>
    <string name="amity_new_posts_description">Receive notifications when someone create new posts in the community.</string>
    <string name="amity_reactions">Reactions</string>
    <string name="amity_reacts_post">Reacts posts</string>
    <string name="amity_reacts_post_description">Receive notifications when someone make a reaction to your posts in this community.</string>
    <string name="amity_reacts_comments">Reacts Comments</string>
    <string name="amity_reacts_comments_description">Receive notifications when someone like your comment in this community.</string>
    <string name="amity_new_comments">New Comments</string>
    <string name="amity_new_comments_description">Receive notifications when someone comment to your posts in this community.</string>
    <string name="amity_replies">Replies</string>
    <string name="amity_replies_description">Receive notifications when someone comment to your comments in this community.</string>
    <string name="amity_skip_for_now">Skip for now</string>
    <string name="amity_customize_community_settings">Community settings</string>
    <string name="amity_customize_community_title">Customize your\ncommunity</string>
    <string name="amity_customize_community_description">You’ve successfully created a\ncommunity! Now let\'s manage\npermissions that work best for you</string>
    <string name="amity_poll_question">Poll question*</string>
    <string name="amity_poll_question_hint">What’s your poll question?</string>
    <string name="amity_poll_question_error">You have reached 500 characters limit.</string>
    <string name="amity_poll_answer">Options*</string>
    <string name="amity_poll_answer_hint">Create at least 2 options</string>
    <string name="amity_poll_add_answer">Add option</string>
    <string name="amity_poll_multiple_answers">Multiple selection</string>
    <string name="amity_poll_multiple_answers_hint">Turn on to allow others to vote more than one option</string>
    <string name="amity_poll_closed_in">Schedule poll (Optional)</string>
    <string name="amity_poll_closed_in_error">You can set up to 30 days</string>
    <string name="amity_poll_closed_in_hint">Poll will be automatically closed at the end of chosen time frame. You can set up to 30 days</string>
    <string name="amity_poll_closed_in_dialog">Enter time frame (days)</string>
    <string name="amity_create_community">Create Community</string>
</resources>