<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.amity.socialcloud.uikit.common.common.views.AmityColorShade" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/amity_padding_s"
            android:src="@drawable/amity_ic_xmlid" />

        <TextView
            android:id="@+id/tvEmptyGlobalFeed"
            style="@style/AmityTextStyleHeadline"
            textColorShade="@{AmityColorShade.SHADE2}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_s"
            android:text="@string/amity_empty_feed"
            android:textColor="@color/amityColorBase" />

        <TextView
            android:id="@+id/tvFindCommunity"
            style="@style/AmityTextStyleBody"
            textColorShade="@{AmityColorShade.SHADE2}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amity_find_community"
            android:textColor="@color/amityColorBase" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExplore"
            style="@style/AmityMaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_s"
            android:paddingHorizontal="@dimen/amity_padding_m3"
            android:text="@string/amity_explore_community"
            app:icon="@drawable/amity_ic_search"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/tvCreateCommunity"
            style="@style/AmityTextStyleBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_m1"
            android:text="@string/amity_create_community"
            android:textColor="@color/amityColorPrimary" />

    </LinearLayout>
</layout>